plugin/src/test/resources/testData/foo/language/annotators/functions/ExtraCommas_expected.camel
${bodyAs(java.lang.String<error descr="Extra Commas">, ,,, , , , ,</error>)}